# journey-map-thinking

./: .dockerignore  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile.test  LICENSE  PRIVACY.md  README.md  SECURITY.md  docker-compose.test.yml  pyproject.toml
.github/workflows/: ci.yml  docker-e2e.yml
docs/: cli.md  lane_catalog.md  python_api.md  quickstart.md  research_result.md
examples/cli_basic/: README.md  raw_goal.txt  run.sh
examples/custom_lane_catalog/: README.md  lanes.json  run.sh
examples/github_actions/: README.md  ci_example.yml
examples/python_basic/: README.md  run.py
examples/research_reproduction/: README.md  harness_stub.py
examples/resume_pattern/: README.md  run.py
journey_map/: __init__.py  artifacts.py  catalog_loader.py  classifiers.py  cli.py  gate_alignment.py  lanes.py  milestone_map.py  position.py  progress.py  runner.py  schema.py  selector.py  update.py
paper/: Journey_Map_Thinking.md
scripts/: docker_e2e.sh
tests/: conftest.py  test_artifacts.py  test_catalog_loader.py  test_classifiers.py  test_cli.py  test_gate_alignment.py  test_integration.py  test_lanes.py  test_milestone_map.py  test_position.py  test_progress.py  test_runner.py  test_schema.py  test_security_privacy.py  test_selector.py  test_update.py
tests/e2e/: __init__.py  test_python_api_contract.py
tests/fixtures/: custom_lane_catalog.json  custom_lane_catalog.yaml  invalid.json  malformed_catalog.yaml  release_verdict_pass.json  release_verdict_summary_only.json  spec_build.md  task_build.md  task_docs.md
